@@ -19,29 +19,6 @@
 
 load_lib "dejagnu.exp"
 
-# Uncomment these for debugging help
-#strace $tracelevel
-# exp_internal -f dbg.log 1
-
-# Get the size of the module being tested.
-set sizes [exe_size "unit"]
-if {[lindex $sizes 0] == "-1"} {
-    perror "Couldn't get the object file size" 0
-}
-
-# Extract the text section size
-set textsize [lindex $sizes 0]
-
-# Extract the data section size
-set datasize [lindex $sizes 1]
-
-# FIXME: This ultimately needs to be recorded in the testing database,
-# which doesn't exist yet. Till then it's kinda bogus, but I figured
-# it would be useful having working code to get this data. So we print
-# it out, just for the demo aspects.
-verbose "Text section size of proctor is 0x$textsize"
-verbose "Data section size of proctor is 0x$datasize"
-
 # Execute the test case, and analyse the output
 if { [host_execute "unit"] != "" } {
     perror "unit had an execution error" 0
