@@ -1,5 +1,9 @@
 2016-03-15  Ben Elliston  <bje@gnu.org>
 
+	* testsuite/libdejagnu/tunit.exp: Clean up.
+
+2016-03-15  Ben Elliston  <bje@gnu.org>
+
 	* lib/utils.exp (diff): Remove proc.
 	* doc/ref.xml: Update documentation.
 	* doc/dejagnu.texi: Regenerate.
